--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
   - speedtest-tracker/ks.yaml
   - stun-turn/ks.yaml
   - rustdesk/ks.yaml
-  # - rdgen/ks.yaml
-  # - docuseal/ks.yaml
+  - docuseal/ks.yaml
   - joplin/ks.yaml  
-  # - authentik/ks.yaml
+  - authentik/ks.yaml
+  # - rdgen/ks.yaml
