--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -109,7 +109,7 @@ spec:
     cnpg:
       main:
         password: ${AUTHENTIK_CNPG_PWD}
-        #mode: recovery
+        mode: recovery
         backups:
           enabled: true
           credentials: s3
@@ -119,12 +119,12 @@ spec:
               backupOwnerReference: self
               immediate: true
               suspend: false
-          revision: "1"
+          revision: "2"
           retentionPolicy: "7d"
         recovery:
           method: object_store
           credentials: s3
-          revision: ""       
+          revision: "1"       
     redis:
       password: ${AUTHENTIK_REDIS_PWD}    
     authentik:
