--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - jellyfin/ks.yaml
   - immich/ks.yaml
   - vaultwarden/ks.yaml
-  - xepg/ks.yaml
+  # - xepg/ks.yaml
   - xteve/ks.yaml
   - nextcloud/ks.yaml
   - speedtest-tracker/ks.yaml
