--- a/clusters/main/kubernetes/apps/xepg/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/xepg/app/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
         cpu: 10m
     image:
       repository: docker.io/mooneydude/myxepg
-      pullPolicy: IfNotPresent
+      pullPolicy: Always
       tag: latest
     securityContext:
       container:
