--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -138,7 +138,7 @@ spec:
               backupOwnerReference: self
               immediate: true
               suspend: false
-          revision: "1"
+          revision: ""
           retentionPolicy: "7d"
         recovery:
           method: object_store
