--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -48,6 +48,7 @@ spec:
     persistence:
       media:
         storageClass: ceph-filesystem
+        size: 1Gi
         accessModes:
           - ReadWriteMany        
         volsync:
