--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -139,7 +139,7 @@ spec:
               backupOwnerReference: self
               immediate: true
               suspend: false
-          revision: ""
+          revision: "1"
           retentionPolicy: "7d"
         recovery:
           method: object_store
