--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -56,7 +56,7 @@ spec:
             type: restic
             credentials: s3
             src:
-              volumeSnapshotClassName: csi-ceph-blockpool               
+              volumeSnapshotClassName: ceph-filesystem              
               enabled: true
               schedule: "0 3 * * *"  
             dest:
