--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -60,7 +60,7 @@ spec:
               enabled: true
               schedule: "0 3 * * *"  
             dest:
-              volumeSnapshotClassName: csi-ceph-blockpool               
+              volumeSnapshotClassName: ceph-filesystem                
               enabled: true
       templates:
         storageClass: ceph-filesystem
