--- a/clusters/main/kubernetes/apps/docuseal/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/docuseal/app/helm-release.yaml
@@ -55,23 +55,16 @@ spec:
             paths:
               - path: /
                 pathType: Prefix          
-        # Authentik forward auth annotations
-        annotations:
-          nginx.ingress.kubernetes.io/auth-url: "http://authentik-http.authentik.svc.cluster.local:10230/outpost.goauthentik.io/auth/nginx"
-          nginx.ingress.kubernetes.io/auth-signin: "https://sign.${DOMAIN_4}/outpost.goauthentik.io/start?rd=$escaped_request_uri"
-          nginx.ingress.kubernetes.io/auth-response-headers: "X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
-          nginx.ingress.kubernetes.io/auth-snippet: |
-            proxy_set_header X-Forwarded-Host $http_host;        
         integrations:
           certManager:
             enabled: true
             certificateIssuer: domain-0-le-prod   
-          # nginx:
-          #   enabled: true
-          #   auth:
-          #     type: "authentik"
-          #     internalHost: "authentik-http.authentik.svc.cluster.local:10230"
-          #     externalHost: "sign.${DOMAIN_4}"                   
+          nginx:
+            enabled: true
+            auth:
+              type: "authentik"
+              internalHost: "authentik-http.authentik.svc.cluster.local:10230"
+              externalHost: "sign.${DOMAIN_4}"                   
     persistence:
       data:
         storageClass: ceph-filesystem
