--- a/clusters/main/kubernetes/apps/docuseal/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/docuseal/app/helm-release.yaml
@@ -44,11 +44,18 @@ spec:
       requests:
         cpu: 10m
     env:
-      # Explicitly set authentication configuration
+      # Comprehensive OAuth2 and Authentication Configuration
+      AUTHENTICATION_METHOD: "oauth2"
+      OAUTH2_ENABLED: "true"
+      OAUTH2_PROVIDER: "authentik"
+      OAUTH2_CLIENT_ID: "${DOCUSEAL_OAUTH_CLIENT_ID}"
+      OAUTH2_CLIENT_SECRET: "${DOCUSEAL_OAUTH_CLIENT_SECRET}"
+      OAUTH2_AUTHORIZE_URL: "https://auth.${DOMAIN_1}/application/o/authorize/"
+      OAUTH2_TOKEN_URL: "https://auth.${DOMAIN_1}/application/o/token/"
+      OAUTH2_USERINFO_URL: "https://auth.${DOMAIN_1}/application/o/userinfo/"
+      OAUTH2_CALLBACK_URL: "https://sign.${DOMAIN_4}/oauth2/callback"
       SKIP_SETUP: "true"
       SKIP_LOGIN: "true"
-      AUTHENTICATION_PROVIDER: "authentik"
-      AUTHENTIK_PROVIDER_URL: "https://auth.${DOMAIN_1}/application/o/docuseal/"
     ingress:
       main:
         enabled: true
@@ -59,7 +66,7 @@ spec:
               - path: /
                 pathType: Prefix
         annotations:
-          # Explicitly configure Authentik authentication
+          # Authentik OAuth2 and Authentication Annotations
           nginx.ingress.kubernetes.io/auth-url: "https://auth.${DOMAIN_1}/outpost.goauthentik.io/auth/nginx"
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.${DOMAIN_1}/login?rd=$escaped_request_uri"
         integrations:
@@ -72,20 +79,13 @@ spec:
               type: "authentik"
               internalHost: "authentik-http.authentik.svc.cluster.local:10230"
               externalHost: "sign.${DOMAIN_4}"
-    # Explicitly configure Authentik integration
+    # Authentik Integration Configuration
     authentik:
       enabled: true
       outpost:
         type: proxy
         serviceName: authentik-outpost
         servicePort: 9000
-      proxy:
-        enabled: true
-        entrypoint: 
-          command: 
-            - "/bin/sh"
-            - "-c"
-            - "exec authentik-proxy-outpost --config /etc/authentik/config.yml"
     persistence:
       data:
         storageClass: ceph-filesystem
