--- a/clusters/main/kubernetes/apps/docuseal/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/docuseal/app/helm-release.yaml
@@ -28,6 +28,9 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  uninstall:
+    keepHistory: false
+
   values:
     global:
       stopAll: false
@@ -38,76 +41,45 @@ spec:
         bucket: "${MINIO_S3PREFIX}-docuseal"
         accessKey: "${MINIO_S3ID}"
         secretKey: "${MINIO_S3KEY}"
-        encrKey: "${MINIO_S3KEY}"
+        encrKey: "${MINIO_S3KEY}"       
     TZ: America/Chicago
     resources:
       requests:
-        cpu: 10m
-    env:
-      # Comprehensive OAuth2 and Authentication Configuration
-      AUTHENTICATION_METHOD: "oauth2"
-      OAUTH2_ENABLED: "true"
-      OAUTH2_PROVIDER: "authentik"
-      OAUTH2_CLIENT_ID: "${DOCUSEAL_OAUTH_CLIENT_ID}"
-      OAUTH2_CLIENT_SECRET: "${DOCUSEAL_OAUTH_CLIENT_SECRET}"
-      OAUTH2_AUTHORIZE_URL: "https://auth.${DOMAIN_1}/application/o/authorize/"
-      OAUTH2_TOKEN_URL: "https://auth.${DOMAIN_1}/application/o/token/"
-      OAUTH2_USERINFO_URL: "https://auth.${DOMAIN_1}/application/o/userinfo/"
-      OAUTH2_CALLBACK_URL: "https://sign.rocketlifeinsurance.com/oauth2/callback"
-      OAUTH2_ALTERNATIVE_CALLBACK_URL: "https://sign.rocketlifeinsurance.com/auth/callback"
-      SKIP_SETUP: "true"
-      SKIP_LOGIN: "true"
+        cpu: 10m    
     ingress:
       main:
         enabled: true
         ingressClassName: internal
         hosts:
           - host: sign.${DOMAIN_4}
-            paths:
-              - path: /
-                pathType: Prefix
-        annotations:
-          # Authentik OAuth2 and Authentication Annotations
-          nginx.ingress.kubernetes.io/auth-url: "https://auth.${DOMAIN_1}/outpost.goauthentik.io/auth/nginx"
-          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${DOMAIN_1}/login?rd=$escaped_request_uri"
-          nginx.ingress.kubernetes.io/configuration-snippet: |
-            proxy_set_header X-Original-URI $request_uri;
-            proxy_set_header X-Forwarded-Proto $scheme;
         integrations:
           certManager:
             enabled: true
-            certificateIssuer: domain-0-le-prod
+            certificateIssuer: domain-0-le-prod   
           nginx:
             enabled: true
             auth:
               type: "authentik"
               internalHost: "authentik-http.authentik.svc.cluster.local:10230"
-              externalHost: "sign.${DOMAIN_4}"
-    # Authentik Integration Configuration
-    authentik:
-      enabled: true
-      outpost:
-        type: proxy
-        serviceName: authentik-outpost
-        servicePort: 9000
+              externalHost: "sign.${DOMAIN_4}"                   
     persistence:
       data:
         storageClass: ceph-filesystem
         size: 10Gi
         accessModes:
-          - ReadWriteMany
+          - ReadWriteMany        
         volsync:
-          - name: data
-            type: restic
-            credentials: s3
-            dest:
-              volumeSnapshotClassName: ceph-filesystem
-              enabled: true
-            src:
-              volumeSnapshotClassName: ceph-filesystem
-              enabled: true
-              trigger:
-                schedule: "15 15 * * *"
+        - name: data
+          type: restic
+          credentials: s3
+          dest:
+            volumeSnapshotClassName: ceph-filesystem
+            enabled: true
+          src:
+            volumeSnapshotClassName: ceph-filesystem 
+            enabled: true
+            trigger:
+              schedule: "15 15 * * *"        
     cnpg:
       main:
         # mode: recovery   # Set to 'recovery' when recovery from S3, also change the revisions 
@@ -119,9 +91,10 @@ spec:
               schedule: "0 15 15 * * *"
               backupOwnerReference: self
               immediate: true
-              suspend: false
+              suspend: false          
           revision: "1"
         recovery:
           method: object_store
           credentials: s3
           revision: ""
+
