--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -170,6 +170,10 @@ spec:
             paths:
               - path: /outpost.goauthentik.io
                 pathType: ImplementationSpecific
+          - host: radarr.${DOMAIN_1}"
+            paths:
+              - path: /outpost.goauthentik.io
+                pathType: ImplementationSpecific                
         integrations:
           certManager:
             enabled: true
