--- a/clusters/main/kubernetes/apps/mydocuseal/ks.yaml
+++ b/clusters/main/kubernetes/apps/mydocuseal/ks.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: radarr
+  name: mydocuseal
   namespace: flux-system
 spec:
   interval: 10m
-  path: clusters/main/kubernetes/apps/radarr/app
+  path: clusters/main/kubernetes/apps/mydocuseal/app
   prune: true
   sourceRef:
     kind: GitRepository
