--- a/clusters/main/kubernetes/apps/mydocuseal/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/mydocuseal/app/helm-release.yaml
@@ -3,14 +3,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: xepg
-  namespace: xepg
+  name: mydocuseal
+  namespace: mydocuseal
 spec:
   interval: 15m
   chart:
     spec:
       chart: app-template
-      version: 15.7.2
+      version: 15.7.0
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -57,7 +57,7 @@ spec:
               disableSignIn: true
               internalHost: "authentik-http.authentik.svc.cluster.local:10230"
               externalHost: "sign.${DOMAIN_1}"   
-                              
+
     securityContext:
       container:
         readOnlyRootFilesystem: false
