--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
-    "github>trueforge-org/truecharts//.github/renovate/main.json5"
+    "github>trueforge-org/truecharts//.github/renovate/main.json5",
+    "github>mooneydude/talos-cluster//.github/special_talos.json5"
   ]
 }
