--- a/clusters/main/kubernetes/apps/filebrowser/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/filebrowser/app/helm-release.yaml
@@ -14,7 +14,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: truecharts
-        namespace: filebrowser
+        namespace: flux-system
       interval: 15m
   timeout: 20m
   maxHistory: 3
