--- a/clusters/main/talos/talconfig.yaml
+++ b/clusters/main/talos/talconfig.yaml
@@ -1,8 +1,8 @@
 clusterName: ${CLUSTERNAME}
 # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
-talosVersion: v1.10.1
+talosVersion: v1.10.7
 # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
-kubernetesVersion: v1.33.3
+kubernetesVersion: v1.33.4
 endpoint: https://${VIP}:6443
 allowSchedulingOnControlPlanes: false
 additionalMachineCertSans:
@@ -89,6 +89,11 @@ nodes:
       installDiskSelector:
         # size: <= 600GB
         model: Fan*
+      schematic:
+          customization:
+              systemExtensions:
+                  officialExtensions:
+                      - siderolabs/i915
     - hostname: k8s-worker-2
       ipAddress: 192.168.2.206
       nameservers:
@@ -96,6 +101,11 @@ nodes:
         - 8.8.8.8
       installDiskSelector:
         model: KIN*
+      schematic:
+          customization:
+              systemExtensions:
+                  officialExtensions:
+                      - siderolabs/i915
     - hostname: k8s-worker-3
       ipAddress: 192.168.2.205
       nameservers:
