--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
     TZ: America/Chicago
     resources:    
       limits:
+        cpu: 2000m
         memory: 1Gi
       requests:
         cpu: 500m
