--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -141,7 +141,7 @@ spec:
       main:
         podSpec:
           containers:
-            main:
+            microservices:
               resources:
                 limits:
                   gpu.intel.com/i915: 1
