--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -32,9 +32,9 @@ spec:
     global:
       stopAll: false
     TZ: America/Chicago
-    resources:    
-      requests:
-        cpu: 50m
+    # resources:    
+    #   requests:
+    #     cpu: 50m
     credentials:
       s3:
         type: s3
@@ -137,11 +137,19 @@ spec:
           credentials: s3
           revision: "1"
 
-    workload:
-      microservices:
-        podSpec:
-          containers:
-            main:
-              resources:
-                limits:
-                  gpu.intel.com/i915: 1
+    # workload:
+    #   microservices:
+    #     podSpec:
+    #       containers:
+    #         main:
+    #           resources:
+    #             limits:
+    #               gpu.intel.com/i915: 1
+    
+    # immich:
+    #   mlImageType: mlCudaImage
+    resources:
+      limits:
+        gpu.intel.com/i915: 1
+    # podOptions:
+    #   runtimeClassName: nvidia    
