--- a/clusters/main/kubernetes/apps/speedtest-tracker/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/speedtest-tracker/app/helm-release.yaml
@@ -74,9 +74,9 @@ spec:
                 schedule: "15 23 * * *"
     cnpg:
       main:
-        mode: recovery   # Set to 'recovery' when recovery from S3, also change the revisions 
+        # mode: recovery   # Set to 'recovery' when recovery from S3, also change the revisions 
         backups:
-          enabled: false
+          enabled: true
           credentials: s3
           scheduledBackups:
             - name: daily-backup
@@ -85,7 +85,7 @@ spec:
               immediate: true
               suspend: false           
           retentionPolicy: "14d"
-          revision: "2"
+          revision: "1"
         recovery:
           method: object_store
           credentials: s3
