--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -126,10 +126,10 @@ spec:
 
     cnpg:
       main:
-        # type: vectorchord
-        mode: recovery  # Set to 'recovery' when recovery from S3, also change the revisions 
+        type: vectorchord
+        # mode: recovery  # Set to 'recovery' when recovery from S3, also change the revisions 
         backups:
-          enabled: true  # Set to 'false' when performing new install (recovery)
+          enabled: false  # Set to 'false' when performing new install (recovery)
           credentials: s3
           retentionPolicy: "7d"
           revision: "2"
