--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -147,11 +147,11 @@ spec:
     #             limits:
     #               gpu.intel.com/i915: 1
     
-    # resources:
-    #   limits:
-    #     gpu.intel.com/i915: 1
-    #     cpu: 1000m
+    resources:
+      limits:
+        gpu.intel.com/i915: 1
+        cpu: 1000m
 
-    workload:
-      main:
-        replicas: 0    
+    # workload:
+    #   main:
+    #     replicas: 0    
