--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: immich
-      version: 25.0.0
+      version: 25.0.1
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -128,7 +128,7 @@ spec:
       main:
         mode: recovery  # Set to 'recovery' when recovery from S3, also change the revisions 
         backups:
-          enabled: false  # Set to 'false' when performing new install (recovery)
+          enabled: true  # Set to 'false' when performing new install (recovery)
           credentials: s3
           retentionPolicy: "7d"
           revision: "3"
