--- a/clusters/main/kubernetes/apps/joplin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/joplin/app/helm-release.yaml
@@ -109,7 +109,7 @@ spec:
               env:
                 APP_BASE_URL: "https://{{ if .Values.ingress }}{{ if .Values.ingress.main.enabled }}{{ ( index .Values.ingress.main.hosts 0 ).host }}{{ else }}placeholder.com{{ end }}{{ else }}placeholder.com{{ end }}"
                 APP_PORT: "{{ .Values.service.main.ports.main.port }}"
-                ALLOWED_ORIGINS: "*"
+                USER_CONTENT_BASE_URL: "https://joplin.mooneybin.net"
                 DB_CLIENT: "pg"
                 POSTGRES_DATABASE: "{{ .Values.cnpg.main.database }}"
                 POSTGRES_USER: "{{ .Values.cnpg.main.user }}"
