--- a/clusters/main/kubernetes/apps/etesync/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync/app/helm-release.yaml
@@ -136,6 +136,8 @@ spec:
     workload:
       main:
         podSpec:
+          securityContext:
+            fsGroup: 373
           containers:
             main:
               env:
